# python-service-template

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml.template  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  template-validation.yml
src/template_pkg/: __init__.py  main.py
tests/: test_smoke.py
