[project]
name = "TEMPLATE_PKG"
version = "0.1.0"
description = "TEMPLATE_DESCRIPTION"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template_pkg"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.10.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
